--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -114,6 +114,18 @@ jvv:
         服务端被错误强制关闭！
         错误信息：%{error}
 
+      wtf_show_log_and_no_log: |
+        您无法同时选择显示和不显示输出信息！
+
+        “
+        这让我想起那个古老的寓言：一位卖矛和盾的商人，先是夸口他的盾‘任何矛都刺不穿’，
+        接着又宣称他的矛 ‘能刺穿任何盾’。当被问到 ’用你的矛刺你的盾会怎样’ 时，他哑口无言。
+        ”
+
+        您的指令就像这则故事，既要显示日志，又要不显示日志。我该遵循哪个矛盾的命令呢？
+
+        **提示**：使用 `jvv listen --no-log` 或 `jvv listen --show-log` 覆盖默认 Logger 设置运行
+
   success:
     here:
       info: |
