Add crossterm dependency and implement jvii editor
- Add crossterm crate for terminal UI capabilities
- Update jvii editor with proper status bar and keyboard hints
- Add i18n support for editor interface
- Remove default nano editor configuration from shell scripts

--- a/locales/help_docs/en.yml
+++ b/locales/help_docs/en.yml
@@ -940,6 +940,10 @@ jv:
           version_already_exist: |
             The version %{version} of file %{path} you are committing already exists in the upstream vault, please use a different version number!
 
+jvii:
+  hints: |
+    [^S WRITE] [ESC EXIT]
+
 editor:
   update_editor: |
     # You are using editor mode to track and update files
